# sjepa

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
cpu/configs/: eval.yaml  export.yaml  hdf5.yaml  train.yaml  train_twophase.yaml
docs/: codingstyles.md  en_concepts.md  fr_concepts.md  sjepa_explained.tex  training.md
gpu/configs/: eval.yaml  export.yaml  hdf5.yaml  train.yaml
papers/sources/arXiv-2606.19398v1/: 00README.json  file.sty  main.bbl  main.tex  references.bib
papers/sources/s-jepa-main/: .gitignore  README.md  ds_config_jepa_pretrain.json  fit_gmm.py  model.py  requirements.txt  train.py
src/sjepa/: __init__.py  assembly.py  checkpointing.py  config.py  config_schema.py  data_module.py  dataloader.py  gmm.py  gmm_builder.py  history.py  logging.py  lossfn.py  lr_shedulers.py  model.py  onnx_export.py  optimizers.py  phases.py  plotting.py  progress.py  rundir.py  step.py  summary.py  targets.py  trainer.py
src/sjepa/dataset/: __init__.py  audio.py  augment.py  dataset.py  features.py  filtering.py  hdf5.py  readers.py  sources.py  windowing.py
src/sjepa/entrypoints/: __init__.py  buildds.py  common.py  evaluate.py  exportmodel.py  inference.py  train.py
src/sjepa/metrics/: __init__.py  base.py  functional.py  metrics.py
src/sjepa/modules/: __init__.py  attention.py  cluster_head.py  ema.py  encoder.py  feature_extractor.py  gradient_scaling.py  losses.py  masking.py  normalization.py  positional_encoding.py  predictor.py  transformer.py
tests/: conftest.py  test_dataloader.py  test_dataset.py  test_gmm.py  test_model.py  test_modules.py  test_performance.py  test_pipeline.py  test_plateau_fixes.py  test_training_modules.py
