[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sjepa"
version = "0.1.0"
description = "S-JEPA speech self-supervised model (reimplementation for stable training and inference)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Arnold Mokira", email = "arnoldmokira3d48@gmail.com" },
]
dependencies = [
    "pyyaml==6.0.3",
    "pillow==12.2.0",
    "tomli==2.4.1",
    "soundfile==0.14.0",
    "numpy==2.2.6",
    "matplotlib==3.10.9",
    "scipy==1.15.3",
    "h5py==3.16.0",
    "sympy==1.14.0",
    "torch==2.8",
    "torchinfo==1.8.0",
    "tqdm==4.68.3",
    "loguru==0.7.3",
]

[project.optional-dependencies]
onnx = [
    "onnx>=1.15",
    "onnxruntime>=1.16",
]

[project.scripts]
buildh5ds = "sjepa.entrypoints.buildds:main"
trainsjepa = "sjepa.entrypoints.train:main"
evalsjepa = "sjepa.entrypoints.evaluate:main"
exportw = "sjepa.entrypoints.exportmodel:main"
infersjepa = "sjepa.entrypoints.inference:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
# Add the package source to the path. We do NOT add the repository root,
# because the root logging.py would shadow the standard library logging.
pythonpath = ["src"]
